app/assets/stylesheets/classrooms.css
body {
  /*background-image: url('http://1.bp.blogspot.com/-gFxl7iFbhN0/U0beLdwg9oI/AAAAAAAAPDY/BBNB0uLKWW4/s1600/seamless-textures-PARQUET-WOOD-FLOORING-%2329b.jpg');*/
	background-image: url('http://www.sharecg.com/images/medium/27733.jpg');
	background-size: 380px;
}

#img_del {
  float: right;
}

#shower {
  display:none;
}

.tbl {
  width:300px;
  height: 150px;
}

.img_tbl {
    width: 100%;
    height: 100%;
}

.student {
	width:80px;
  height: 100px;
}

.img_student {
	width: 100%;
  height: 100%;
}

#set_medium {
  color: red;
}

#classroom {
  /*padding-top: 100px;*/
  /*padding-left: 100px;*/
  height: 650px;
  width: 92%;
  margin-top: 0px;
  background-image: url('http://1.bp.blogspot.com/-gFxl7iFbhN0/U0beLdwg9oI/AAAAAAAAPDY/BBNB0uLKWW4/s1600/seamless-textures-PARQUET-WOOD-FLOORING-%2329b.jpg');
  background-size: 250px;
  /*background: rgba(255,255,255,.3);*/
  box-shadow: 6px 6px 4px #081706;
}

#menu {
	z-index: 1000;
  background: rgba(255,255,240,.9);
  padding: 20px;
  max-width: 30%;
  border-radius: 20px;
  border: double black 7px;
}

.menu_item {
	cursor: pointer;
	background-color: rgba(200,200,200,0.5);	
	padding:3px;
	border-radius: 2px;
}

.menu_icon img {
  width: 30px;
}

#tracker_console {
	/*display: none;*/
  background: white
}

.thumb-tack {
  margin-bottom:-85px;
  position:relative;
  width:80px;
}

#thumb-tack-1 {
  left:-35%;
  z-index:900;
}

#thumb-tack-2 {
  left:45%;
  z-index:901;
}

#thumb-tack-3 {
  left:-48%;
  z-index:902;
  margin-bottom: -1270px;
}

#thumb-tack-4 {
  left:34%;
  z-index:903;
  margin-bottom: -1270px;
}

.glow{
  box-shadow: 0px 0px 30px white;
}

.selected{
  box-shadow: 0px 0px 30px white;
}

